syntax = "proto3";

package common;

service Common {
    rpc listTrain(CommonRequest) returns (CommonReply) {}
    rpc listDept(CommonRequest) returns (CommonReply) {}
    rpc listTeam(CommonRequest) returns (CommonReply) {}
    rpc markTeam(CommonRequest) returns (CommonReply) {}
    rpc unmark(CommonRequest) returns (CommonReply) {}
    rpc listQc(CommonRequest) returns (CommonReply) {}
    rpc markQc(CommonRequest) returns (CommonReply) {}
}

message CommonRequest { string data = 1; }

message CommonReply { string data = 1; }
